--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/navigation_home"
         android:name="com.example.climbing.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_percursos"
+            app:destination="@id/percursos" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_dashboard"
@@ -19,7 +23,16 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.climbing.ui.notifications.NotificationsFragment"
+        android:name="com.example.climbing.ui.notifications.ProfileFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/percursos"
+        android:name="com.example.climbing.ui.home.Percursos"
+        android:label="fragment_percursos"
+        tools:layout="@layout/fragment_percursos" >
+        <action
+            android:id="@+id/action_percursos_to_navigation_home"
+            app:destination="@id/navigation_home" />
+    </fragment>
 </navigation>
