--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_navigation_home_to_percursos"
             app:destination="@id/percursos" />
+        <action
+            android:id="@+id/action_navigation_home_to_newPercursoFragment"
+            app:destination="@id/newPercursoFragment" />
     </fragment>
 
     <fragment
@@ -34,5 +37,13 @@
         <action
             android:id="@+id/action_percursos_to_navigation_home"
             app:destination="@id/navigation_home" />
+        <action
+            android:id="@+id/action_percursos_to_newPercursoFragment"
+            app:destination="@id/newPercursoFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/newPercursoFragment"
+        android:name="com.example.climbing.ui.home.New_percursoFragment"
+        android:label="fragment_new_percurso"
+        tools:layout="@layout/fragment_new_percurso" />
 </navigation>
