--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,15 +8,20 @@
     <EditText
         android:id="@+id/editTextEmail"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="292dp"
+        android:layout_marginTop="328dp"
         android:layout_marginEnd="60dp"
+        android:background="@drawable/custom_edit"
+        android:drawableStart="@drawable/custom_email"
+        android:drawablePadding="12dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
@@ -25,8 +30,8 @@
         android:id="@+id/buttonRegistar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="157dp"
-        android:layout_marginEnd="152dp"
+        android:layout_marginTop="160dp"
+        android:layout_marginEnd="128dp"
         android:text="Registar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
@@ -34,14 +39,19 @@
     <EditText
         android:id="@+id/editTextPersonName"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="216dp"
+        android:layout_marginTop="244dp"
         android:layout_marginEnd="60dp"
+        android:background="@drawable/custom_edit"
+        android:drawableStart="@drawable/custom_account"
+        android:drawablePadding="12dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,15 +59,21 @@
 
     <EditText
         android:id="@+id/editTextPasswordRegister"
-        android:layout_width="288dp"
-        android:layout_height="52dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="60dp"
+        android:background="@drawable/custom_edit"
+        android:drawableStart="@drawable/custom_lock"
+        android:drawablePadding="12dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
 
@@ -66,9 +82,10 @@
         android:layout_width="217dp"
         android:layout_height="211dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="96dp"
+        android:layout_marginEnd="68dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_account_circle_24"
         tools:ignore="ImageContrastCheck"
         tools:srcCompat="@drawable/ic_baseline_account_circle_24" />
 
