--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#5ec639</color>
+    <color name="GreenLime">#32cd32</color>
+    <color name="DarkBlue">#00008b</color>
+    <color name="green_blue">#008080</color>
+    <color name="gray">#a0a0a0</color>
 </resources>
