--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,37 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/purple_500"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/DarkBlue">
 
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="144dp"
-        android:layout_height="143dp"
+        android:layout_width="218dp"
+        android:layout_height="243dp"
         android:layout_marginStart="141dp"
-        android:layout_marginTop="297dp"
+        android:layout_marginTop="152dp"
         android:layout_marginEnd="142dp"
-        android:layout_marginBottom="306dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="153dp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewSplash"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:srcCompat="@mipmap/climbing"
+        tools:srcCompat="@mipmap/climbing" />
 
     <TextView
         android:id="@+id/textViewSplash"
         android:layout_width="wrap_content"
         android:layout_height="180px"
-        android:textSize="120px"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="171dp"
+        android:layout_marginTop="45dp"
         android:layout_marginEnd="100dp"
-        android:textColor="@color/white"
-        android:layout_marginBottom="108dp"
         android:text="Climbing"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        android:textColor="@color/white"
+        android:textSize="120px"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
