--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,25 +10,25 @@
         android:id="@+id/textNameUser"
         android:layout_width="0dp"
         android:layout_height="70px"
-        android:layout_marginStart="66dp"
-        android:layout_marginTop="308dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginStart="175dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginEnd="55dp"
         android:hint="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageProfile" />
 
     <TextView
         android:id="@+id/textEmailUser"
         android:layout_width="0dp"
         android:layout_height="70px"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginStart="175dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="55dp"
         android:hint="Email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textNameUser" />
 
@@ -36,32 +36,35 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="158dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="195dp"
+        android:layout_marginStart="184dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="40dp"
         android:text="Profile User"
         android:textSize="70px"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.531"
+        app:layout_constraintBottom_toTopOf="@+id/imageProfile"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.975" />
 
     <Button
         android:id="@+id/buttonLogOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:layout_marginBottom="176dp"
+        android:layout_marginStart="204dp"
+        android:layout_marginTop="144dp"
+        android:layout_marginBottom="175dp"
         android:text="LogOut"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textEmailUser"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/imageProfile"
         android:layout_width="128dp"
         android:layout_height="123dp"
-        android:layout_marginStart="125dp"
-        android:layout_marginBottom="84dp"
+        android:layout_marginStart="172dp"
+        android:layout_marginBottom="65dp"
         android:src="@drawable/ic_baseline_account_circle_24"
         app:layout_constraintBottom_toTopOf="@+id/textNameUser"
         app:layout_constraintStart_toStartOf="parent" />
