--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,6 +14,6 @@
     <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_baseline_account_circle_24"
-        android:title="@string/title_notifications" />
+        android:title="Profile" />
 
 </menu>
