--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
 <style name="Theme.Climbing" parent="Theme.MaterialComponents.Light.DarkActionBar">
 <!-- Primary brand color. -->
-<item name="colorPrimary">#1C6E8C</item>
-<item name="colorPrimaryVariant">#1C6E8C </item>
+<item name="colorPrimary">@color/DarkBlue</item>
+<item name="colorPrimaryVariant">@color/DarkBlue </item>
 <item name="colorOnPrimary">@color/white</item>
 <!-- Secondary brand color. -->
 <item name="colorSecondary">@color/teal_200</item>
