--- a/app/src/main/res/layout/fragment_percursos.xml
+++ b/app/src/main/res/layout/fragment_percursos.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.home.Percursos">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/recyclerViewPercursos"
         android:layout_width="match_parent"
         android:layout_height="591dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,6 +23,6 @@
         android:clickable="true"
         android:src="@drawable/ic_baseline_add_circle_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewPercursos"
         tools:ignore="SpeakableTextPresentCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
