--- a/app/src/main/res/layout/row_percurso.xml
+++ b/app/src/main/res/layout/row_percurso.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="200dp"
+    android:id="@+id/linha">
 
     <TextView
         android:id="@+id/textViewId"
