--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,14 +14,8 @@
             android:id="@+id/action_navigation_home_to_percursos"
             app:destination="@id/percursos" />
         <action
-            android:id="@+id/action_navigation_home_to_newPercursoFragment"
-            app:destination="@id/newPercursoFragment" />
-        <action
-            android:id="@+id/action_navigation_home_to_new_participanteFragment"
-            app:destination="@id/new_participanteFragment" />
-        <action
-            android:id="@+id/action_navigation_home_to_participantesFragment"
-            app:destination="@id/participantesFragment" />
+            android:id="@+id/action_navigation_home_to_participantesFragment2"
+            app:destination="@id/participantesFragment2" />
     </fragment>
 
     <fragment
@@ -41,41 +35,46 @@
         android:label="fragment_percursos"
         tools:layout="@layout/fragment_percursos">
         <action
-            android:id="@+id/action_percursos_to_navigation_home"
-            app:destination="@id/navigation_home" />
-        <action
             android:id="@+id/action_percursos_to_newPercursoFragment"
             app:destination="@id/newPercursoFragment" />
         <action
-            android:id="@+id/action_percursos_to_participantesFragment"
-            app:destination="@id/participantesFragment" />
+            android:id="@+id/action_percursos_to_percursoDetailFrafment"
+            app:destination="@id/percursoDetailFrafment" />
     </fragment>
     <fragment
         android:id="@+id/newPercursoFragment"
         android:name="com.example.climbing.ui.home.New_percursoFragment"
         android:label="New Route"
-        tools:layout="@layout/fragment_new_percurso">
-        <action
-            android:id="@+id/action_newPercursoFragment_to_navigation_home"
-            app:destination="@id/navigation_home"
-            app:popUpToInclusive="false" />
-    </fragment>
+        tools:layout="@layout/fragment_new_percurso"/>
     <fragment
-        android:id="@+id/participantesFragment"
-        android:name="com.example.climbing.ui.home.ParticipantesFragment"
-        android:label="fragment_participantes"
+        android:id="@+id/percursoDetailFrafment"
+        android:name="com.example.climbing.ui.home.PercursoDetailFragment"
+        android:label="Detalhe de Percurso"
         tools:layout="@layout/fragment_participantes" >
+        <argument android:name="id_percurso"
+            app:argType="string" />
         <action
-            android:id="@+id/action_participantesFragment_to_new_participanteFragment"
-            app:destination="@id/new_participanteFragment" />
+            android:id="@+id/action_percursoDetailFrafment_to_selectParticipanteFragment"
+            app:destination="@id/selectParticipanteFragment" />
     </fragment>
     <fragment
         android:id="@+id/new_participanteFragment"
         android:name="com.example.climbing.ui.home.New_participanteFragment"
         android:label="fragment_new_participante"
-        tools:layout="@layout/fragment_new_participante" >
+        tools:layout="@layout/fragment_new_participante" />
+    <fragment
+        android:id="@+id/selectParticipanteFragment"
+        android:name="com.example.climbing.ui.home.SelectParticipanteFragment"
+        android:label="SelectParticipanteFragment" >
         <action
-            android:id="@+id/action_new_participanteFragment_to_navigation_home"
-            app:destination="@id/navigation_home" />
+            android:id="@+id/action_selectParticipanteFragment_to_new_participanteFragment"
+            app:destination="@id/new_participanteFragment" />
+        <argument
+            android:name="id_percurso"
+            app:argType="string" />
     </fragment>
+    <fragment
+        android:id="@+id/participantesFragment2"
+        android:name="com.example.climbing.ui.home.ParticipantesFragment"
+        android:label="ParticipantesFragment" />
 </navigation>
