--- a/app/src/main/res/layout/fragment_send_measurements.xml
+++ b/app/src/main/res/layout/fragment_send_measurements.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.measurements.SendMeasurementsFragment">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewBlood"
         android:layout_width="155dp"
         android:layout_height="49dp"
         android:layout_marginStart="36dp"
@@ -17,11 +17,11 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewHeadbeat"
         android:layout_width="144dp"
         android:layout_height="47dp"
         android:layout_marginTop="70dp"
-        android:layout_marginEnd="27dp"
+        android:layout_marginEnd="28dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="68dp"
-        android:layout_marginTop="66dp"
+        android:layout_marginTop="32dp"
         android:text="Blood Oxygen"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -40,11 +40,11 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="66dp"
-        android:layout_marginEnd="99dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="80dp"
         android:layout_marginBottom="32dp"
         android:text="Heartbeat"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/textViewHeadbeat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -58,17 +58,17 @@
         android:text="Are you tired?"
         app:layout_constraintEnd_toStartOf="@+id/checkBoxTired"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonRandomValue" />
 
     <CheckBox
         android:id="@+id/checkBoxTired"
         android:layout_width="82dp"
         android:layout_height="51dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="165dp"
+        android:layout_marginTop="132dp"
         android:text="Yes"
         app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewHeadbeat" />
 
     <TextView
         android:id="@+id/textView6"
@@ -87,20 +87,20 @@
         android:layout_width="82dp"
         android:layout_height="51dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="44dp"
         android:text="Yes"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/checkBoxTired" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonRandomValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="48dp"
         android:text="Ramdom Values"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewBlood" />
 
     <TextView
         android:id="@+id/textView7"
@@ -143,20 +143,21 @@
         android:layout_width="82dp"
         android:layout_height="51dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="54dp"
+        android:layout_marginBottom="64dp"
         android:text="Yes"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/RegisterMeasurementButton"
         app:layout_constraintStart_toEndOf="@+id/textView8" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/RegisterMeasurementButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="178dp"
         android:layout_marginEnd="139dp"
-        android:layout_marginBottom="71dp"
+        android:layout_marginBottom="124dp"
         android:text="Register Measurement"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.436"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
