--- a/app/src/main/res/layout/fragment_send_measurements.xml
+++ b/app/src/main/res/layout/fragment_send_measurements.xml
@@ -10,19 +10,23 @@
         android:id="@+id/textViewBlood"
         android:layout_width="155dp"
         android:layout_height="49dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="70dp"
-        android:text="TextView"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="44dp"
+        android:text="0"
+        android:textColor="@color/black"
+        android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textViewHeadbeat"
-        android:layout_width="144dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="28dp"
-        android:text="TextView"
+        android:layout_width="155dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="16dp"
+        android:text="0"
+        android:textColor="@color/black"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
@@ -30,20 +34,26 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="32dp"
         android:text="Blood Oxygen"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="39dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginEnd="44dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:layout_marginBottom="32dp"
         android:text="Heartbeat"
+        android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewHeadbeat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -53,9 +63,11 @@
         android:layout_width="259dp"
         android:layout_height="51dp"
         android:layout_marginStart="38dp"
+        android:textColor="@color/black"
         android:layout_marginTop="37dp"
         android:layout_marginEnd="16dp"
         android:text="Are you tired?"
+        android:textSize="17dp"
         app:layout_constraintEnd_toStartOf="@+id/checkBoxTired"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonRandomValue" />
@@ -65,8 +77,10 @@
         android:layout_width="82dp"
         android:layout_height="51dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="17dp"
         android:text="Yes"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/textViewHeadbeat" />
 
@@ -75,8 +89,10 @@
         android:layout_width="259dp"
         android:layout_height="51dp"
         android:layout_marginStart="39dp"
+        android:textColor="@color/black"
         android:layout_marginTop="34dp"
         android:layout_marginEnd="16dp"
+        android:textSize="17dp"
         android:text="Do you have insomnia?"
         app:layout_constraintEnd_toStartOf="@+id/checkBoxinsomnia"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,7 +104,9 @@
         android:layout_height="51dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="44dp"
+        android:layout_marginEnd="17dp"
         android:text="Yes"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/checkBoxTired" />
 
@@ -96,9 +114,11 @@
         android:id="@+id/buttonRandomValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
+        android:layout_marginStart="123dp"
         android:layout_marginTop="48dp"
+        android:layout_marginEnd="123dp"
         android:text="Ramdom Values"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewBlood" />
 
@@ -107,7 +127,9 @@
         android:layout_width="259dp"
         android:layout_height="51dp"
         android:layout_marginStart="37dp"
-        android:layout_marginTop="34dp"
+        android:textColor="@color/black"
+        android:textSize="17dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="16dp"
         android:text="Do you have dizziness?"
         app:layout_constraintEnd_toStartOf="@+id/checkBoxdiziness"
@@ -119,8 +141,10 @@
         android:layout_width="82dp"
         android:layout_height="51dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="17dp"
         android:text="Yes"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/checkBoxinsomnia" />
 
@@ -129,11 +153,13 @@
         android:layout_width="259dp"
         android:layout_height="51dp"
         android:layout_marginStart="39dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="16dp"
         android:freezesText="false"
         android:text="Do you have headaches?"
         android:textAlignment="viewStart"
+        android:textColor="@color/black"
+        android:textSize="17dp"
         app:layout_constraintEnd_toStartOf="@+id/checkBoxHeadaches"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -142,22 +168,27 @@
         android:id="@+id/checkBoxHeadaches"
         android:layout_width="82dp"
         android:layout_height="51dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="17dp"
         android:text="Yes"
-        app:layout_constraintBottom_toTopOf="@+id/RegisterMeasurementButton"
-        app:layout_constraintStart_toEndOf="@+id/textView8" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/checkBoxdiziness" />
 
     <Button
         android:id="@+id/RegisterMeasurementButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="178dp"
+        android:layout_marginTop="34dp"
         android:layout_marginEnd="139dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginBottom="96dp"
         android:text="Register Measurement"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.436"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.646"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:layout_constraintVertical_bias="0.282" />
 </androidx.constraintlayout.widget.ConstraintLayout>
